<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:title="@string/networkmode_activity_title" >

    <ListPreference
        android:dialogTitle="@string/str_phoneid"
        android:entries="@array/array_phoneid_key"
        android:entryValues="@array/array_phoneid_value"
        android:key="@string/str_key_phoneid"
        android:title="@string/str_phoneid" />

    <ListPreference
        android:dialogTitle="@string/str_networkmode"
        android:entries="@array/array_networkmode_key"
        android:entryValues="@array/array_networkmode_value"
        android:key="@string/str_key_networkmode"
        android:title="@string/str_networkmode" />

</PreferenceScreen>
