<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:title="@string/plat_subnet_activity_title" >

    <SwitchPreference
        android:key="key_plat_subnet"
        android:persistent="false"
        android:title="@string/str_plat_subnet" />

    <Preference
        android:key="text"
        android:summary="@string/str_plat_subnet_summary"
        android:title="@string/str_comment" />

</PreferenceScreen>