<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:background="@drawable/bg_rectangle"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:text="@string/str_name" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/txt_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:background="@drawable/bg_rectangle"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:text="@string/str_apn" />

        <EditText
            android:id="@+id/edit_apn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/txt_apn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:background="@drawable/bg_rectangle"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:text="@string/str_user_name" />

        <EditText
            android:id="@+id/edit_user_name"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/txt_user_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:background="@drawable/bg_rectangle"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:text="@string/str_pwd" />

        <EditText
            android:id="@+id/edit_pwd"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/txt_pwd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:background="@drawable/bg_rectangle"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:text="@string/str_mcc" />

        <EditText
            android:id="@+id/edit_mcc"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:background="@drawable/bg_rectangle"
            android:editable="false"
            android:gravity="center"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:background="@drawable/bg_rectangle"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:text="@string/str_mnc" />

        <EditText
            android:id="@+id/edit_mnc"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:background="@drawable/bg_rectangle"
            android:editable="false"
            android:gravity="center"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:background="@drawable/bg_rectangle"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:text="@string/str_apn_type" />

        <EditText
            android:id="@+id/edit_apn_type"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:background="@drawable/bg_rectangle"
            android:editable="false"
            android:gravity="center"
            android:singleLine="true" />
    </LinearLayout>

</LinearLayout>