<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <CheckBox
            android:id="@+id/btn_tethering"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_rectangle"
            android:text="@string/str_tethering" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#6F6F6F"
            android:text="@string/str_reset"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:text="@string/str_enabled" />

        <RadioGroup
            android:id="@+id/rg_enable"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1" >

            <RadioButton
                android:id="@+id/rb_enable_on"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.5"
                android:text="@string/str_rb_on" />

            <RadioButton
                android:id="@+id/rb_enable_off"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.5"
                android:text="@string/str_rb_off" />
        </RadioGroup>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:text="@string/str_tcpport" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="1" >

            <EditText
                android:id="@+id/edit_tcpport"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="0.7"
                android:background="@drawable/bg_rectangle"
                android:gravity="center"
                android:inputType="number"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_tcpport"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="0.3"
                android:background="#6F6F6F"
                android:text="@string/str_ok"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:text="@string/str_udpport" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="1" >

            <EditText
                android:id="@+id/edit_udpport"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="0.7"
                android:background="@drawable/bg_rectangle"
                android:gravity="center"
                android:inputType="number"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_udpport"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="0.3"
                android:background="#6F6F6F"
                android:text="@string/str_ok"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:text="@string/str_ipv6_address" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="1" >

            <EditText
                android:id="@+id/edit_pcaddr1"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="0.7"
                android:background="@drawable/bg_rectangle"
                android:gravity="center"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_pcaddr1"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="0.3"
                android:background="#6F6F6F"
                android:text="@string/str_ok"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="1" >

            <EditText
                android:id="@+id/edit_pcaddr2"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="0.7"
                android:background="@drawable/bg_rectangle"
                android:gravity="center"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_pcaddr2"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="0.3"
                android:background="#6F6F6F"
                android:text="@string/str_ok"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:text="@string/str_synpacketdrop" />

        <RadioGroup
            android:id="@+id/rg_synpacketdrop"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_rectangle"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1" >

            <RadioButton
                android:id="@+id/rb_synpacketdrop_on"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.5"
                android:text="@string/str_rb_on" />

            <RadioButton
                android:id="@+id/rb_synpacketdrop_off"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.5"
                android:text="@string/str_rb_off" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_result"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#6F6F6F"
            android:text="@string/str_result"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</ScrollView>